updated some css for ul

--- a/main.css
+++ b/main.css
@@ -7,6 +7,12 @@ body {
     color: pink;
 }
 
+ul{
+    list-style:none;
+    color:white;
+}
+
+
 /*!
  * Start Bootstrap - Grayscale v5.0.2 (https://startbootstrap.com/template-overviews/grayscale)
  * Copyright 2013-2018 Start Bootstrap
