added css to make background stick, selected lightbulb backdrop

--- a/main.css
+++ b/main.css
@@ -4,9 +4,18 @@
 body {
     padding-top: 30px;
     padding-bottom: 20px;
-    color: pink;
 }
 
+#page-top{
+    background-image: url("design/img/light-bulb-small.jpg");
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-attachment: fixed;
+}
+.projects-section{
+    background-color:beige;
+}
+/*Unordered lists*/
 ul{
     list-style:none;
     color:white;
